# approval-service

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml
alembic/: env.py
alembic/versions/: 001_initial.py
approval-service/: DESIGN.md  README.md  pyproject.toml
approval-service/src/approval_service/: database.py  dependencies.py  events.py  models.py
approval-service/src/approval_service.egg-info/: PKG-INFO  top_level.txt
src/approval_service/: config.py  main.py  schemas.py  service.py
src/approval_service.egg-info/: SOURCES.txt  requires.txt
tests/: conftest.py  test_approval.py
